# true-tdd

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONCEPT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  autotest-concept.md  autotest.cfg  autotest_watch.py  loop_feedback.json  pyproject.toml  truetdd.cfg
.agents/skills/truetdd/: SKILL.md
.agents/workflows/: autotest-loop.md  truetdd-loop.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
autotest/: conftest_plugin.py  graph_analyzer.py  hook.py  mutation_bridge.py  prd_parser.py  report.py
autotest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
autotest/templates/: autotest.cfg  mutmut_config.py  post-commit.hook
docs/plans/: 2026-05-08-reliability-shield.md  2026-05-09-data-aware-design.md  task.md
example/: .coverage  coverage.json  loop_feedback.json  mutation_results.json  prd.md  traceability_store.json
example/example/: traceability_store.json
example/graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json
example/mutants/: mutmut-stats.json  setup.cfg  traceability_store.json
example/mutants/example/: traceability_store.json
example/mutants/src/: calculator.py
example/mutants/tests/: conftest.py
example/src/: calculator.py
example/tests/: test_calculator.py
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
tests/: test_conftest_plugin.py  test_correlator.py  test_data_injector.py  test_delta_manager.py  test_graph_analyzer.py  test_graph_sync.py  test_import.py  test_mutation_bridge.py  test_prd_parser.py  test_report.py  test_testdata_suggester.py
truetdd/: __init__.py  apply.py  conftest_plugin.py  correlator.py  data_injector.py  delta_manager.py  discovery.py  graph_analyzer.py  graph_sync.py  hook.py  init_project.py  mutation_bridge.py  prd_parser.py  report.py  summary_report.py  testdata_suggester.py  watch.py
truetdd/templates/: mutmut_config.py  post-commit.hook  prd.md  run_pipeline.sh  testdata.yaml  truetdd.cfg
